# chempotpy

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: ci_setup.sh  publish.yml  test.sh  test.yml  upload_wheels.sh
chempotpy/: generate_pyf.sh
chempotpy/ALC/: ALC5m0_LEPS_ModelSurface.pyf  ALC6m0_LEPS_ModelSurface.pyf  ALC7m0_LEPS_ModelSurface.pyf  ALC7m10_LEPS_ModelSurface.pyf  ALC7m1_LEPS_ModelSurface.pyf  ALC7m4_LEPS_ModelSurface.pyf  ALC7m5_LEPS_ModelSurface.pyf  ALC7m7_LEPS_ModelSurface.pyf  ALC7p2_LEPS_ModelSurface.pyf  ALC7p3_LEPS_ModelSurface.pyf  ALC7p5_LEPS_ModelSurface.pyf  ALC_LEPS_ModelSurface.pyf
chempotpy/AlmHn/: AlmHn_VBO1.pyf  AlmHn_VBO2.pyf
chempotpy/Aln/: Aln_BetH.pyf  Aln_CleR.pyf  Aln_CoxJM.pyf  Aln_ER.pyf  Aln_ER2.pyf  Aln_ER2AT.pyf  Aln_ER2BA.pyf  Aln_ER2CN.pyf  Aln_ER2CoxJM.pyf  Aln_ER2EACN.pyf  Aln_ER2EAT.pyf  Aln_ER2EBA.pyf  Aln_ER2ECN.pyf  Aln_ER2ES.pyf  Aln_ER2ESCNa.pyf  Aln_ER2ESCNm.pyf  Aln_ER2GEA.pyf  Aln_ER2MeiD.pyf  Aln_ER2MisFMP.pyf  Aln_ER2S.pyf  Aln_ER2SCNa.pyf  Aln_ER2SCNm.pyf  Aln_ErkIV.pyf  Aln_ErkV.pyf  Aln_ErkVIII.pyf  Aln_Gol.pyf  Aln_HalP.pyf  Aln_Jac.pyf  Aln_MeiD.pyf  Aln_MisFMP.pyf  Aln_NP_A.pyf  Aln_NP_Ad.pyf  Aln_NP_B.pyf  Aln_NP_Bd.pyf  Aln_NP_C.pyf  Aln_NP_D.pyf  Aln_NP_E.pyf  Aln_PapCEP.pyf  Aln_PapKEP.pyf  Aln_PeaTHT.pyf  (+19 more)
chempotpy/ArNO/: ArNO_Ap_PIPNN.pyf  ArNO_App_PIPNN.pyf
chempotpy/BrH2/: BrH2_LEPS_C_1982.pyf  BrH2_LEPS_LTBZ1_1995.pyf  BrH2_LEPS_LTBZ2_1995.pyf  BrH2_LEPS_LTBZ2_1995_DPEM.pyf  BrH2_LEPS_LTBZSO_1995.pyf  BrH2_LEPS_LTBZSO_1995_DPEM.pyf  BrH2_LEPS_W_1959.pyf
chempotpy/BrHCl/: BrHCl_LEPS1.pyf  BrHCl_LEPS2.pyf  BrHCl_LEPS3.pyf
chempotpy/C2H2N2O/: C2H2N2O_PIPNN.pyf
chempotpy/C2H2O/: C2H2O_PIPNN.pyf
chempotpy/C2H6Cl/: C2H6Cl_VBMM.pyf
chempotpy/C2H6F/: C2H6F_VBMM.pyf
chempotpy/C2H6H/: C2H6H_VBMM.pyf
chempotpy/C2H6O/: C2H6O_VBMM.pyf
chempotpy/C2H6OH/: C2H6OH_VBMM.pyf
chempotpy/C2H7/: C2H7_VBMM.pyf
chempotpy/C2N/: C2N_PIPNN_Ap.pyf  C2N_PIPNN_App.pyf
chempotpy/C3H7NO/: C3H7NO_PIP.pyf
chempotpy/C6H5SH/: C6H5SH_APRP.pyf  C6H5SH_APRP_DPEM.pyf
chempotpy/C6H6O/: PHOH_APRP.pyf  PHOH_APRP_DPEM.pyf
chempotpy/C7H8S/: C7H8S_APRP.pyf  C7H8S_APRP_DPEM.pyf  C7H8S_III_APRP.pyf  C7H8S_III_APRP_DPEM.pyf  C7H8S_S22_APRP.pyf  C7H8S_S22_APRP_DPEM.pyf
chempotpy/CH2O/: CH2O_PIPNN.pyf
chempotpy/CH2O2/: CH2O2_PIPNN.pyf
chempotpy/CH3NH2/: CH3NH2_APRP.pyf  CH3NH2_APRP_DPEM.pyf
chempotpy/CH3OH/: CH3OH_PIP.pyf
chempotpy/CH4/: CH4_GEN_SP_2001.f  CH4_GEN_SP_2001.pyf  ch4T8.pyf
chempotpy/CH4Br/: CH4Br_VBMM_2002.pyf
chempotpy/CH4CN/: CH4CN_VBMM.pyf
chempotpy/CH4Cl/: CH4Cl_VBMM_2000.pyf  CH4Cl_VBMM_2005.pyf
chempotpy/CH4F/: CH4F_GEN_GCSO_1996.pyf  CH4F_GEN_GC_1996.pyf  CH4F_LEPS_RNCG_2006.pyf
chempotpy/CH4O/: CH4O_LEP_1995.pyf  CH4O_LEP_1998.pyf  CH4O_LEP_2000.pyf  CH4O_LEP_2014.pyf
chempotpy/CH4OCl/: CH4OCl_PIPNN.pyf  CH4OCl_VBMM_2023.pyf
chempotpy/CH4OF/: CH4OF_PIPNN.pyf
chempotpy/CH4OH/: CH4OH_VBMM_2000.pyf  CH4OH_VBMM_2015.pyf
chempotpy/CH4_H2O_H2O/: CH4_H2O_H2O_PIP.pyf
chempotpy/CH5/: CH5_GEN_J1_1987.pyf  CH5_GEN_J2_1987.pyf  CH5_LEPS_JG_1995.pyf  CH5_LEPS_JJ_2002.pyf  CH5_VBMM_CBG_2009.pyf
chempotpy/CH5O2/: CH5O2_VBMM_2023.pyf
chempotpy/CH5p/: CH5p_PIP.f  CH5p_PIP.pyf
chempotpy/COCO/: COCO_PIPNN.pyf
chempotpy/Cl2H/: Cl2H_LEPS_BCMR_1983.pyf  Cl2H_LEPS_KNPRY_1966.pyf  Cl2H_LEPS_PK2_1987.pyf  Cl2H_LEPS_PK3_1987.pyf
chempotpy/ClH2/: ClH2_LEPS_ALTG1_1996.pyf  ClH2_LEPS_ALTG2_1996.pyf  ClH2_LEPS_GTM1_1981.pyf  ClH2_LEPS_GTM2_1981.pyf  ClH2_LEPS_GTM3_1981.pyf  ClH2_LEPS_GTM4_1982.pyf  ClH2_LEPS_KNPRY_1966.pyf  ClH2_LEPS_LB_1980.pyf  ClH2_LEPS_PK1_1966.pyf  ClH2_LEPS_PK2_1966.pyf  ClH2_LEPS_SPK_1973.pyf  ClH2_LEPS_STSBLTG1_1989.pyf  ClH2_LEPS_STSBLTG2_1989.pyf  ClH2_LEPS_TTGI1_1985.pyf  ClH2_LEPS_TTGI2_1985.pyf
chempotpy/ClH2O/: ClH2O_PIPNN.pyf
chempotpy/ClNH3/: ClNH3_VBMM.pyf
chempotpy/F2H/: F2H_LEPS_JOT_1972.pyf  F2H_LEPS_KNPRY_1966.pyf
chempotpy/F2H2/: F2H2_GEN_JBKKL_1990.pyf  F2H2_GEN_S2_1996.pyf  F2H2_GEN_SQSBDE_1995.pyf
chempotpy/FH2/: FH2_GEN_5SECCOG1_1993.pyf  FH2_GEN_5SECCOG2_1993.pyf  FH2_GEN_5SECCOG3_1993.pyf  FH2_GEN_5SECG1_1993.pyf  FH2_GEN_5SECG2_1993.pyf  FH2_GEN_5SECG3_1993.pyf  FH2_GEN_5SECS1_1993.pyf  FH2_GEN_5SECS2_1993.pyf  FH2_GEN_5SECS3_1993.pyf  FH2_GEN_5SECW_1991.pyf  FH2_GEN_5SEC_1991.pyf  FH2_GEN_6SEC_1993.pyf  FH2_LEPS_M5SK_1966.pyf  FH2_LEPS_M5_1991.pyf  FH2_LEPS_NO1_1984.pyf  FH2_LEPS_NO2_1984.pyf  FH2_LEPS_NO2a_1984.pyf  FH2_LEPS_NO3_1984.pyf  FH2_LEPS_NO4_1984.pyf  FH2_LEPS_NO5_1985.pyf  FH2_LEPS_NO5a_1985.pyf  FH2_LEPS_NO5b_1985.pyf  FH2_LEPS_NO5z_1985.pyf  FH2_LEPS_SK_1980.pyf
chempotpy/FH2O/: FH2O_PIPNN.pyf  FH2O_SOC_PIPNN.pyf
chempotpy/GeH4OH/: GeH4OH_VBMM.pyf
chempotpy/GeH5/: GeH5_LEPS.pyf
chempotpy/H2CO/: H2CO_PIP.pyf
chempotpy/H2O2/: H2O2_GEN_1998.pyf
chempotpy/H2OBr/: H2OBr_PIP.pyf
chempotpy/H3/: H3_GEN_A2_2002.pyf  H3_GEN_A3_2002.pyf  H3_GEN_A4_2002.pyf  H3_GEN_BH_2009.pyf  H3_GEN_BKMP3_1996.pyf  H3_GEN_BKMP_1991.pyf  H3_GEN_CCI_2002.pyf  H3_GEN_DMBE_1987.pyf  H3_GEN_PK2_1964.pyf  H3_GEN_TK_1984.pyf
chempotpy/H3Cl/: H3Cl_PIPNN.pyf
chempotpy/H3ClO/: H3ClO_PIPNN.pyf
chempotpy/H3S/: H3S_PIPNN.pyf
chempotpy/H3p/: H3p_KBNN_2002.pyf  H3p_UNO_2001.pyf
chempotpy/H4O2/: H4O2_PIP.pyf
chempotpy/HClOH/: HClOH_PIPNN.pyf
chempotpy/HO3/: HO3_PIPNN.pyf
chempotpy/HOBr/: HOBr_3App_PIP.pyf
chempotpy/HOCO_Ar/: HOCO_Ar_PIP.pyf
chempotpy/I2H/: I2H_LEPS_KK_1981.pyf  I2H_LEPS_PT1_1971.pyf  I2H_LEPS_PT2_1971.pyf
chempotpy/IH2/: IH2_LEPS_DT1_1971.pyf  IH2_LEPS_DT2_1971.pyf  IH2_LEPS_KNPRY_1966.pyf  IH2_LEPS_PPW1_1974.pyf  IH2_LEPS_RSPTS_1970.pyf
chempotpy/K2Rb2/: K2Rb2_PIPNN.pyf
chempotpy/LiFH/: LiFH_LEPS_JHCTP_2001.pyf  LiFH_LEPS_JHCTP_2001_DPEM.pyf  LiFH_LEPS_JHTP1_2002.pyf  LiFH_LEPS_JHTP1_2002_DPEM.pyf  LiFH_LEPS_JHTP2_2002.pyf  LiFH_LEPS_JHTP2_2002_DPEM.pyf
chempotpy/MCH/: MCHSB_LEPS_ModelSurface.pyf  MCHSB_LEPS_ModelSurface_DPEM.pyf  MCHSL_LEPS_ModelSurface.pyf  MCHSL_LEPS_ModelSurface_DPEM.pyf  MCHTL_LEPS_ModelSurface.pyf  MCHTL_LEPS_ModelSurface_DPEM.pyf  (+4 more)
tests/: test_YRH_example.py
(+126 files in other folders)
