[project]
name = "chempotpy"
description = "chempotpy: CHEMical library of POTential energy surfaces in PYthon"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Yinan Shu"},
    { name = "Zoltan Varga"},
    { name = "Dayou Zhang"},
    { name = "Donald G. Truhlar"}
]
requires-python = ">= 3.8"
dependencies = [
    "numpy>=2.0.2",
]

[build-system]
requires = [
    "scikit-build-core",
    "numpy>=2.0.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "actiontoy/_version.py"
regex = '''__version__ = "(?P<version>[^"]+)"'''
result = "{version}"

[tool.scikit-build]
wheel.exclude = [
    ".github",
    "tests",
    "**/*.pyf",
]
sdist.exclude = [
    ".github",
    "tests",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-all = "yum -y install openblas-devel"
